; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/platform/gl/extr_gl-ui.c_ui_draw_ibevel.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/platform/gl/extr_gl-ui.c_ui_draw_ibevel.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@UI_COLOR_BEVEL_2 = common dso_local global i32 0, align 4
@UI_COLOR_BEVEL_1 = common dso_local global i32 0, align 4
@UI_COLOR_BEVEL_3 = common dso_local global i32 0, align 4
@UI_COLOR_BEVEL_4 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ui_draw_ibevel(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %14

7:                                                ; preds = %2
  %8 = load i32, i32* %3, align 4
  %9 = load i32, i32* @UI_COLOR_BEVEL_2, align 4
  %10 = load i32, i32* @UI_COLOR_BEVEL_1, align 4
  %11 = load i32, i32* @UI_COLOR_BEVEL_3, align 4
  %12 = load i32, i32* @UI_COLOR_BEVEL_4, align 4
  %13 = call i32 @ui_draw_bevel_imp(i32 %8, i32 %9, i32 %10, i32 %11, i32 %12)
  br label %21

14:                                               ; preds = %2
  %15 = load i32, i32* %3, align 4
  %16 = load i32, i32* @UI_COLOR_BEVEL_3, align 4
  %17 = load i32, i32* @UI_COLOR_BEVEL_4, align 4
  %18 = load i32, i32* @UI_COLOR_BEVEL_2, align 4
  %19 = load i32, i32* @UI_COLOR_BEVEL_1, align 4
  %20 = call i32 @ui_draw_bevel_imp(i32 %15, i32 %16, i32 %17, i32 %18, i32 %19)
  br label %21

21:                                               ; preds = %14, %7
  ret void
}

declare dso_local i32 @ui_draw_bevel_imp(i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
